--- a/06_wine/css/components/Excel.css
+++ b/06_wine/css/components/Excel.css
@@ -1,12 +1,24 @@
-#app table {
+#pad table {
 border: 1px #000000 solid;
 }
 
-#app th {
+#pad th {
 border: 1px #000000 solid;
 }
 
-#app td {
+#pad td {
 border: 1px #000000 solid;
 }
 
+#pad a {
+    position: relative;
+    display: inline-block;
+    padding: 0.25em 0.5em;
+    text-decoration: none;
+    color: #FFF;
+    background: #03A9F4;/*色*/
+    border: solid 1px #0f9ada;/*線色*/
+    border-radius: 4px;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
+    text-shadow: 0 1px 0 rgba(0,0,0,0.2);
+}
